--- a/jiraworklog/src/Container/Timesheet/Timesheet.css
+++ b/jiraworklog/src/Container/Timesheet/Timesheet.css
@@ -3,6 +3,7 @@ table {
     border-spacing: 0;
     width: 100%;
     border: 1px solid rgba(211,211,211, 0.8);
+    border-bottom: 1px solid  rgba(211,211,211, 0.8);
   }
 
   th, td {
@@ -14,3 +15,6 @@ table {
       border-bottom: 2px solid rgba(211,211,211, 0.8);
   }
  
+  .showRightBorder{
+    border-right:1px solid rgba(211,211,211, 0.8);
+  }
