--- a/jiraworklog/src/Component/User/User.css
+++ b/jiraworklog/src/Component/User/User.css
@@ -1,6 +1,36 @@
 .worklogTitle{
-    font-Weight: 'bold';
-    margin: '10px';
-    font-size: 'large'
+    font-Weight: bold;
+    margin: 10px;
+    font-size: large;
 }
 
+img{
+    width: 35px;
+}
+
+.worklogTime{
+    color: black; 
+    font-weight: bold;
+     border-right:1px solid rgba(211,211,211, 0.8);
+}
+
+.comments{
+    float: right;
+     margin: 25px -40px 0px 0px
+}
+
+.modalWorklogTime{
+    float:right;
+    color: gray;
+    margin: 0px 160px 0px 0px
+}
+
+.userName{
+    font-size: 15px;
+     Width: 800px;
+}
+
+.comment{
+    display: inline;
+     margin: 0px 600px 0px 0px;
+}
