--- a/jiraworklog/src/Component/User/User.css
+++ b/jiraworklog/src/Component/User/User.css
@@ -1,7 +1,7 @@
 .worklogTitle{
     font-Weight: bold;
-    margin: 10px;
-    font-size: large;
+    padding:  15px;
+    font-size: 30px;
 }
 
 img{
@@ -11,26 +11,37 @@ img{
 .worklogTime{
     color: black; 
     font-weight: bold;
-     border-right:1px solid rgba(211,211,211, 0.8);
+    border-right:1px solid rgba(211,211,211, 0.8);
+
 }
 
 .comments{
     float: right;
-     margin: 25px -40px 0px 0px
+     margin: 20px -50px 0px 0px;
+     color:black;
+     font-size: 20px;
+     font-weight: bold;
 }
 
 .modalWorklogTime{
     float:right;
-    color: gray;
-    margin: 0px 160px 0px 0px
+    color:black;
+    margin: -10px 160px 0px 0px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .userName{
     font-size: 15px;
-     Width: 800px;
+    max-width: 800px;
+
 }
 
-.comment{
+.title{
     display: inline;
      margin: 0px 600px 0px 0px;
+     color: gray ;
+     font-size: 20px;
+     font-weight: bold;
+
 }
