--- a/jiraworklog/src/Component/User/User.css
+++ b/jiraworklog/src/Component/User/User.css
@@ -11,8 +11,7 @@ img{
 .worklogTime{
     color: black; 
     font-weight: bold;
-    border-right:1px solid rgba(211,211,211, 0.8);
-
+    /* border-right:1px solid rgba(211,211,211, 0.8); */
 }
 
 .comments{
@@ -34,7 +33,8 @@ img{
 .userName{
     font-size: 15px;
     max-width: 800px;
-
+    /* word-break: break-all; */
+    line-height: 1;
 }
 
 .title{
@@ -45,3 +45,29 @@ img{
      font-weight: bold;
 
 }
+.hard_left {
+    position:absolute;
+    *position: relative; /*ie7*/
+    left:0; 
+    width:100px;
+    height: 19px;
+  }
+
+  .next_left {
+    position:absolute;
+    *position: relative; /*ie7*/
+    left:100px; 
+    width:500px;
+
+  }
+
+  .next_right {
+    position:absolute;
+    *position: relative; /*ie7*/
+    left:200px; 
+    width:100px;
+    text-align:center;
+    /* border-bottom:  1px solid rgba(211,211,211, 0.8) */
+
+  }
+
